# Managing_Financial_Data_Project2_C

./: CMakeLists.txt  README.md  Reports-example.xlsx  accounts_crud.c  accounts_crud.h  admin_operations.c  admin_operations.h  custom_objects.c  custom_objects.h  customers_crud.c  customers_crud.h  dynamic_accounts.c  dynamic_accounts.h  dynamic_customers.c  dynamic_customers.h  dynamic_users.c  dynamic_users.h  main.c  reports.c  reports.h  transactions.c  transactions.h  validation.c  validation.h
